Add Apply Delta Demo

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /Labs/ApplyDeltaDemo/.vs/ApplyDeltaDemo/v15
+/Labs/ApplyDeltaDemo/ApplyDeltaDemo/obj/Debug
+/Labs/ApplyDeltaDemo/ApplyDeltaDemo/bin/Debug
