--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /Labs/ApplyDeltaDemo/.vs/ApplyDeltaDemo/v15
 /Labs/ApplyDeltaDemo/ApplyDeltaDemo/obj/Debug
 /Labs/ApplyDeltaDemo/ApplyDeltaDemo/bin/Debug
+/Labs/ApplyDeltaDemo_TRUNK_20180521.zip
